couchdb/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: couchdb-couchdb
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-issuer
spec:
  gatewayClassName: istio
  listeners:
    - name: couchdb-couchdb
      hostname: "dasggwer.masterexecuson.com"
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: couchdb-couchdb-lets-encrypt
        mode: Terminate
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: couchdb-couchdb
spec:
  parentRefs:
    - name: couchdb-couchdb
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: couchdb-couchdb
          port: 5984
